==> vedderb/vesc_bms_fw/ChibiOS_20.3.4/community/os/hal/ports/GD/GD32VF103/OTG/hal_usb_lld.c <==
#include <string.h>
#include "hal.h"
#define TRDT_VALUE_FS           5
#define TRDT_VALUE_HS           9
#define EP0_MAX_INSIZE          64
#define EP0_MAX_OUTSIZE         64
#define GCCFG_INIT_VALUE        (GCCFG_VBUSIG | GCCFG_VBUSACEN |        \
                                 GCCFG_VBUSBCEN | GCCFG_PWRON)
#define GCCFG_INIT_VALUE        (GCCFG_VBUSACEN | GCCFG_VBUSBCEN |          \
                                 GCCFG_PWRON)

static void usb_lld_serve_interrupt(USBDriver *usbp) {
  gd32_usbfs_t *otgp = usbp->otg;
  uint32_t sts, src;

  sts  = otgp->GINTF;
  sts &= otgp->GINTEN;
  otgp->GINTF = sts;

  /* Reset interrupt handling.*/
  if (sts & GINTF_RST) {
    /* Default reset action.*/
    _usb_reset(usbp);

    /* Preventing execution of more handlers, the core has been reset.*/
    return;
  }

  /* Wake-up handling.*/
  if (sts & GINTF_WKUPIF) {
    /* If clocks are gated off, turn them back on (may be the case if
       coming out of suspend mode).*/
    if (otgp->PWRCLKCTL & (PWRCLKCTL_SUCLK | PWRCLKCTL_SHCLK)) {
      /* Set to zero to un-gate the USB core clocks.*/
      otgp->PWRCLKCTL &= ~(PWRCLKCTL_SUCLK | PWRCLKCTL_SHCLK);
    }

    /* Clear the Remote Wake-up Signaling.*/
    otgp->DCTL &= ~DCTL_RWKUP;

    _usb_wakeup(usbp);
  }

  /* Suspend handling.*/
  if (sts & GINTF_SP) {
    /* Stopping all ongoing transfers.*/
    otg_disable_ep(usbp);

    /* Default suspend action.*/
    _usb_suspend(usbp);
  }

  /* Enumeration done.*/
  if (sts & GINTF_ENUMF) {
      otgp->GUSBCS = (otgp->GUSBCS & ~(GUSBCS_UTT_MASK)) |
                      GUSBCS_UTT(TRDT_VALUE_FS);
  }

  /* SOF interrupt handling.*/
  if (sts & GINTF_SOF) {
    _usb_isr_invoke_sof_cb(usbp);
  }

  /* Isochronous IN failed handling */
  if (sts & GINTF_ISOINCIF) {
    otg_isoc_in_failed_handler(usbp);
  }

  /* Isochronous OUT failed handling */
  if (sts & GINTF_ISOONCIF) {
    otg_isoc_out_failed_handler(usbp);
  }

  /* Performing the whole FIFO emptying in the ISR, it is advised to keep
     this IRQ at a very low priority level.*/
  if ((sts & GINTF_RXFNEIF) != 0U) {
    otg_rxfifo_handler(usbp);
  }

  /* IN/OUT endpoints event handling.*/
  src = otgp->DAEPINT;
  if (sts & GINTF_OEPIF) {
    if (src & (1 << 16))
      otg_epout_handler(usbp, 0);
    if (src & (1 << 17))
      otg_epout_handler(usbp, 1);
    if (src & (1 << 18))
      otg_epout_handler(usbp, 2);
    if (src & (1 << 19))
      otg_epout_handler(usbp, 3);
  }
  if (sts & GINTF_IEPIF) {
    if (src & (1 << 0))
      otg_epin_handler(usbp, 0);
    if (src & (1 << 1))
      otg_epin_handler(usbp, 1);
    if (src & (1 << 2))
      otg_epin_handler(usbp, 2);
    if (src & (1 << 3))
      otg_epin_handler(usbp, 3);
  }
}

void usb_lld_start(USBDriver *usbp) {
  gd32_usbfs_t *otgp = usbp->otg;

  if (usbp->state == USB_STOP) {
    /* Clock activation.*/

  if (&USBD1 == usbp) {
    /* USBFS clock enable and reset.*/
    rcuEnableUSBFS(true);
    rcuResetUSBFS();

    /* Enables IRQ vector.*/
    eclicEnableVector(GD32_USBFS_NUMBER, GD32_USB_USBFS_IRQ_PRIORITY, GD32_USB_USBFS_IRQ_TRIGGER);

   /* - Forced device mode.
        - USB turn-around time = TRDT_VALUE_FS.
        - Full Speed 1.1 PHY.*/
    otgp->GUSBCS = GUSBCS_FDM | GUSBCS_UTT(TRDT_VALUE_FS);

    /* 48MHz 1.1 PHY.*/
    otgp->DCFG = 0x02200000 | DCFG_DS_FS11;
    }

    /* PHY enabled.*/
    otgp->PWRCLKCTL = 0;

    /* VBUS sensing and transceiver enabled.*/
    otgp->GCCFG = GCCFG_INIT_VALUE;

    /* Soft core reset.*/
    otg_core_reset(usbp);

    /* Interrupts on TXFIFOs half empty.*/
    otgp->GAHBCS = 0;

    /* Endpoints re-initialization.*/
    otg_disable_ep(usbp);

    /* Clear all pending Device Interrupts, only the USB Reset interrupt
       is required initially.*/
    otgp->DIEPINTF  = 0;
    otgp->DOEPINTF  = 0;
    otgp->DAEPINTEN = 0;
    if (usbp->config->sof_cb == NULL)
      otgp->GINTEN  = GINTEN_ENUMFIE | GINTEN_RSTIE | GINTEN_SPIE |
                       GINTEN_ESPIE | GINTEN_SESIE | GINTEN_WKUPIE |
                       GINTEN_ISOINCIE | GINTEN_ISOONCIE;
    else
      otgp->GINTEN  = GINTEN_ENUMFIE | GINTEN_RSTIE | GINTEN_SPIE |
                       GINTEN_ESPIE | GINTEN_SESIE | GINTEN_WKUPIE |
                       GINTEN_ISOINCIE | GINTEN_ISOONCIE |
                       GINTEN_SOFIE;

    /* Clears all pending IRQs, if any. */
    otgp->GINTF  = 0xFFFFFFFF;

    /* Global interrupts enable.*/
    otgp->GAHBCS |= GAHBCS_GINTEN;
  }
}

void usb_lld_stop(USBDriver *usbp) {
  gd32_usbfs_t *otgp = usbp->otg;

  /* If in ready state then disables the USB clock.*/
  if (usbp->state != USB_STOP) {

    /* Disabling all endpoints in case the driver has been stopped while
       active.*/
    otg_disable_ep(usbp);

    otgp->DAEPINTEN   = 0;
    otgp->GAHBCS    = 0;
    otgp->GCCFG      = 0;

    if (&USBD1 == usbp) {
      eclicDisableVector(GD32_USBFS_NUMBER);
      rcuDisableUSBFS();
    }
  }
}

void usb_lld_reset(USBDriver *usbp) {
  unsigned i;
  gd32_usbfs_t *otgp = usbp->otg;

  /* Flush the Tx FIFO.*/
  otg_txfifo_flush(usbp, 0);

  /* Endpoint interrupts all disabled and cleared.*/
  otgp->DIEPFEINTEN = 0;
  otgp->DAEPINTEN   = DAEPINTEN_OEPIE(0) | DAEPINTEN_IEPIE(0);

  /* All endpoints in NAK mode, interrupts cleared.*/
  for (i = 0; i <= usbp->otgparams->num_endpoints; i++) {
    otgp->ie[i].DIEPCTL = DIEPCTL_SNAK;
    otgp->oe[i].DOEPCTL = DOEPCTL_SNAK;
    otgp->ie[i].DIEPINTF = 0xFFFFFFFF;
    otgp->oe[i].DOEPINTF = 0xFFFFFFFF;
  }

  /* Resets the FIFO memory allocator.*/
  otg_ram_reset(usbp);

  /* Receive FIFO size initialization, the address is always zero.*/
  otgp->GRFLEN = usbp->otgparams->rx_fifo_size;
  otg_rxfifo_flush(usbp);

  /* Resets the device address to zero.*/
  otgp->DCFG = (otgp->DCFG & ~DCFG_DAR_MASK) | DCFG_DAR(0);

  /* Enables also EP-related interrupt sources.*/
  otgp->GINTEN  |= GINTEN_RXFNEIE | GINTEN_OEPIE  | GINTEN_IEPIE;
  otgp->DIEPINTF   = DIEPINTF_CITOEN    | DIEPINTF_TFEN;
  otgp->DOEPINTF   = DOEPINTF_STPFEN   | DOEPINTF_TFEN;

  /* EP0 initialization, it is a special case.*/
  usbp->epc[0] = &ep0config;
  otgp->oe[0].DOEPLEN = DOEPLEN_STPCNT(3);
  otgp->oe[0].DOEPCTL = DOEPCTL_SD0PID | DOEPCTL_EPACT | DOEPCTL_EPTYPE_CTRL |
                        DOEPCTL_MPL(ep0config.out_maxsize);
  otgp->ie[0].DIEPLEN = 0;
  otgp->ie[0].DIEPCTL = DIEPCTL_SD0PID | DIEPCTL_EPACT | DIEPCTL_EPTYPE_CTRL |
                        DIEPCTL_TXFNUM(0) | DIEPCTL_MPL(ep0config.in_maxsize);
  otgp->DIEPTFLEN0 = DIEPTFLEN_IEPTXFD(ep0config.in_maxsize / 4) |
                   DIEPTFLEN_IEPTXRSAR(otg_ram_alloc(usbp,
                                                  ep0config.in_maxsize / 4));
}

void usb_lld_set_address(USBDriver *usbp) {
  gd32_usbfs_t *otgp = usbp->otg;

  otgp->DCFG = (otgp->DCFG & ~DCFG_DAR_MASK) | DCFG_DAR(usbp->address);
}

void usb_lld_init_endpoint(USBDriver *usbp, usbep_t ep) {
  uint32_t ctl, fsize;
  gd32_usbfs_t *otgp = usbp->otg;

  /* IN and OUT common parameters.*/
  switch (usbp->epc[ep]->ep_mode & USB_EP_MODE_TYPE) {
  case USB_EP_MODE_TYPE_CTRL:
    ctl = DIEPCTL_SD0PID | DIEPCTL_EPACT | DIEPCTL_EPTYPE_CTRL;
    break;
  case USB_EP_MODE_TYPE_ISOC:
    ctl = DIEPCTL_SD0PID | DIEPCTL_EPACT | DIEPCTL_EPTYPE_ISO;
    break;
  case USB_EP_MODE_TYPE_BULK:
    ctl = DIEPCTL_SD0PID | DIEPCTL_EPACT | DIEPCTL_EPTYPE_BULK;
    break;
  case USB_EP_MODE_TYPE_INTR:
    ctl = DIEPCTL_SD0PID | DIEPCTL_EPACT | DIEPCTL_EPTYPE_INTR;
    break;
  default:
    return;
  }

  /* OUT endpoint activation or deactivation.*/
  otgp->oe[ep].DOEPLEN = 0;
  if (usbp->epc[ep]->out_state != NULL) {
    otgp->oe[ep].DOEPCTL = ctl | DOEPCTL_MPL(usbp->epc[ep]->out_maxsize);
    otgp->DAEPINTEN |= DAEPINTEN_OEPIE(ep);
  }
  else {
    otgp->oe[ep].DOEPCTL &= ~DOEPCTL_EPACT;
    otgp->DAEPINTEN &= ~DAEPINTEN_OEPIE(ep);
  }

  /* IN endpoint activation or deactivation.*/
  otgp->ie[ep].DIEPLEN = 0;
  if (usbp->epc[ep]->in_state != NULL) {
    /* FIFO allocation for the IN endpoint.*/
    fsize = usbp->epc[ep]->in_maxsize / 4;
    if (usbp->epc[ep]->in_multiplier > 1)
      fsize *= usbp->epc[ep]->in_multiplier;
    otgp->DIEPTFLEN[ep - 1] = DIEPTFLEN_IEPTXFD(fsize) |
                            DIEPTFLEN_IEPTXRSAR(otg_ram_alloc(usbp, fsize));
    otg_txfifo_flush(usbp, ep);

    otgp->ie[ep].DIEPCTL = ctl |
                           DIEPCTL_TXFNUM(ep) |
                           DIEPCTL_MPL(usbp->epc[ep]->in_maxsize);
    otgp->DAEPINTEN |= DAEPINTEN_IEPIE(ep);
  }
  else {
    otgp->DIEPTFLEN[ep - 1] = 0x02000400; /* Reset value.*/
    otg_txfifo_flush(usbp, ep);
    otgp->ie[ep].DIEPCTL &= ~DIEPCTL_EPACT;
    otgp->DAEPINTEN &= ~DAEPINTEN_IEPIE(ep);
  }
}

void usb_lld_disable_endpoints(USBDriver *usbp) {

  /* Resets the FIFO memory allocator.*/
  otg_ram_reset(usbp);

  /* Disabling all endpoints.*/
  otg_disable_ep(usbp);
}

usbepstatus_t usb_lld_get_status_out(USBDriver *usbp, usbep_t ep) {
  uint32_t ctl;

  (void)usbp;

  ctl = usbp->otg->oe[ep].DOEPCTL;
  if (!(ctl & DOEPCTL_EPACT))
    return EP_STATUS_DISABLED;
  if (ctl & DOEPCTL_STALL)
    return EP_STATUS_STALLED;
  return EP_STATUS_ACTIVE;
}

usbepstatus_t usb_lld_get_status_in(USBDriver *usbp, usbep_t ep) {
  uint32_t ctl;

  (void)usbp;

  ctl = usbp->otg->ie[ep].DIEPCTL;
  if (!(ctl & DIEPCTL_EPACT))
    return EP_STATUS_DISABLED;
  if (ctl & DIEPCTL_STALL)
    return EP_STATUS_STALLED;
  return EP_STATUS_ACTIVE;
}

void usb_lld_start_out(USBDriver *usbp, usbep_t ep) {
  uint32_t pcnt, rxsize;
  USBOutEndpointState *osp = usbp->epc[ep]->out_state;

  /* Transfer initialization.*/
  osp->totsize = osp->rxsize;
  if ((ep == 0) && (osp->rxsize > EP0_MAX_OUTSIZE))
      osp->rxsize = EP0_MAX_OUTSIZE;

  /* Transaction size is rounded to a multiple of packet size because the
     following requirement in the RM:
     "For OUT transfers, the transfer size field in the endpoint's transfer
     size register must be a multiple of the maximum packet size of the
     endpoint, adjusted to the Word boundary".*/
  pcnt   = (osp->rxsize + usbp->epc[ep]->out_maxsize - 1U) /
           usbp->epc[ep]->out_maxsize;
  rxsize = (pcnt * usbp->epc[ep]->out_maxsize + 3U) & 0xFFFFFFFCU;

  /*Setting up transaction parameters in DOEPLEN.*/
  usbp->otg->oe[ep].DOEPLEN = DOEPLEN_STPCNT(3) | DOEPLEN_PCNT(pcnt) |
                               DOEPLEN_TLEN(rxsize);

  /* Special case of isochronous endpoint.*/
  if ((usbp->epc[ep]->ep_mode & USB_EP_MODE_TYPE) == USB_EP_MODE_TYPE_ISOC) {
    /* Odd/even bit toggling for isochronous endpoint.*/
    if (usbp->otg->DSTAT & DSTAT_FNRSOF_ODD)
      usbp->otg->oe[ep].DOEPCTL |= DOEPCTL_SEVENFRM;
    else
      usbp->otg->oe[ep].DOEPCTL |= DOEPCTL_SODDFRM;
  }

  /* Starting operation.*/
  usbp->otg->oe[ep].DOEPCTL |= DOEPCTL_EPEN | DOEPCTL_CNAK;
}

void usb_lld_start_in(USBDriver *usbp, usbep_t ep) {
  USBInEndpointState *isp = usbp->epc[ep]->in_state;

  /* Transfer initialization.*/
  isp->totsize = isp->txsize;
  if (isp->txsize == 0) {
    /* Special case, sending zero size packet.*/
    usbp->otg->ie[ep].DIEPLEN = DIEPLEN_PCNT(1) | DIEPLEN_TLEN(0);
  }
  else {
    if ((ep == 0) && (isp->txsize > EP0_MAX_INSIZE))
      isp->txsize = EP0_MAX_INSIZE;

    /* Normal case.*/
    uint32_t pcnt = (isp->txsize + usbp->epc[ep]->in_maxsize - 1) /
                    usbp->epc[ep]->in_maxsize;
    /* CHTODO: Support more than one packet per frame for isochronous transfers.*/
    usbp->otg->ie[ep].DIEPLEN = DIEPLEN_MCPF(1) | DIEPLEN_PCNT(pcnt) |
                                 DIEPLEN_TLEN(isp->txsize);
  }

  /* Special case of isochronous endpoint.*/
  if ((usbp->epc[ep]->ep_mode & USB_EP_MODE_TYPE) == USB_EP_MODE_TYPE_ISOC) {
    /* Odd/even bit toggling.*/
    if (usbp->otg->DSTAT & DSTAT_FNRSOF_ODD)
      usbp->otg->ie[ep].DIEPCTL |= DIEPCTL_SEVENFRM;
    else
      usbp->otg->ie[ep].DIEPCTL |= DIEPCTL_SODDFRM;
  }

  /* Starting operation.*/
  usbp->otg->ie[ep].DIEPCTL |= DIEPCTL_EPEN | DIEPCTL_CNAK;
  usbp->otg->DIEPFEINTEN |= DIEPFEINTEN_IEPTXFEIE(ep);
}

void usb_lld_stall_out(USBDriver *usbp, usbep_t ep) {

  usbp->otg->oe[ep].DOEPCTL |= DOEPCTL_STALL;
}

void usb_lld_stall_in(USBDriver *usbp, usbep_t ep) {

  usbp->otg->ie[ep].DIEPCTL |= DIEPCTL_STALL;
}

void usb_lld_clear_out(USBDriver *usbp, usbep_t ep) {

  usbp->otg->oe[ep].DOEPCTL &= ~DOEPCTL_STALL;
}

void usb_lld_clear_in(USBDriver *usbp, usbep_t ep) {

  usbp->otg->ie[ep].DIEPCTL &= ~DIEPCTL_STALL;
}
