==> vedderb/vesc_bms_fw/ChibiOS_20.3.4/community/os/hal/ports/NUMICRO/LLD/USBv1/hal_usb_lld.c <==
#include "hal.h"
#define NUC123_USB_HW_ENDPOINTS 8
#define NUC123_USBD_CFG_OUT (1UL << USBD_CFG_STATE_Pos)
#define NUC123_USBD_CFG_IN  (2UL << USBD_CFG_STATE_Pos)
#define USBD_SRAM_BASE ((volatile uint8_t*)(USBD_BASE + 0x100))
#define NUC123_USBD_BUSSTATUS_INACK       0UL
#define NUC123_USBD_BUSSTATUS_INNAK       1UL
#define NUC123_USBD_BUSSTATUS_OUTDATA0ACK 2UL
#define NUC123_USBD_BUSSTATUS_SETUPACK    3UL
#define NUC123_USBD_BUSSTATUS_OUTDATA1ACK 6UL
#define NUC123_USBD_BUSSTATUS_ISOEND      7UL
#define NUC123_CLK_CLKDIV_USB(n) (((n)-1) << CLK_CLKDIV_USB_N_Pos)
#define _HW_OUT_EPN(lepn)   (2 * (((lepn)+3)%4))
#define _HW_IN_EPN(lepn)    ((2 * (((lepn)+2)%4))+1)
#define LOGICAL_EPN(hwepn) ((((hwepn) + 3) / 2) % 4)
#define _HW_OUT_EPN(lepn)   (2 * (lepn))
#define _HW_IN_EPN(lepn)    (2 * (((lepn)+3)%4) + 1)
#define LOGICAL_EPN(hwepn) (((hwepn)+1)%8 / 2)
#define _HW_OUT_EPN(lepn)   (2 * (lepn))
#define _HW_IN_EPN(lepn)    (2 * (lepn) + 1)
#define LOGICAL_EPN(hwepn) ((hwepn) / 2)
#define _HW_EP(hwepn)       ((USBD->EP) + (hwepn))
#define HW_OUT_EP(lepn)    (_HW_EP(_HW_OUT_EPN(lepn)))
#define HW_IN_EP(lepn)     (_HW_EP(_HW_IN_EPN(lepn)))
#define BYTES_TO_NEXT_DWORD(bytes) (((bytes) + 7) >> 3)

static void usb_lld_serve_interrupt(USBDriver* usbp)
{

  uint32_t intsts    = USBD->INTSTS;
  uint32_t bussts    = USBD->ATTR & 0xF;

  if (intsts & USBD_INTSTS_FLDET_STS_Msk) {
    if (USBD->FLDET & USBD_FLDET_FLDET_Msk) {
      USBD->ATTR |= (USBD_ATTR_PHY_EN_Msk | USBD_ATTR_USB_EN_Msk);
      usbConnectBus(&USBD1);
    } else {
      usbDisconnectBus(&USBD1);
      USBD->ATTR &= ~USBD_ATTR_USB_EN_Msk;
    }
    USBD->INTSTS = USBD_INTSTS_FLDET_STS_Msk;
  }

  if (intsts & USBD_INTSTS_WAKEUP_STS_Msk) {
    /* Clear event flag */
    USBD->INTSTS = USBD_INTSTS_WAKEUP_STS_Msk;
    _usb_wakeup(usbp);
  }

  if (intsts & USBD_INTSTS_BUS_STS_Msk) {
    /* Clear event flag */
    USBD->INTSTS = USBD_INTSTS_BUS_STS_Msk;

    if (bussts & USBD_ATTR_USBRST_Msk) {
      /* Bus reset */
      USBD->ATTR |= (USBD_ATTR_PHY_EN_Msk | USBD_ATTR_USB_EN_Msk);
      _usb_reset(usbp);
    }
    if (bussts & USBD_ATTR_SUSPEND_Msk) {
      /* Enable USB but disable PHY */
      USBD->ATTR &= ~USBD_ATTR_PHY_EN_Msk;
      _usb_suspend(usbp);
    }
    if (bussts & USBD_ATTR_RESUME_Msk) {
      /* Enable USB and enable PHY */
      USBD->ATTR |= (USBD_ATTR_PHY_EN_Msk | USBD_ATTR_USB_EN_Msk);
      _usb_wakeup(usbp);
    }
  }

  if (intsts & USBD_INTSTS_USB_STS_Msk) {
    if (intsts & USBD_INTSTS_SETUP_Msk) {
      /* Clear event flag */
      USBD->INTSTS = USBD_INTSTS_SETUP_Msk;

      /* Clear the data IN/OUT ready flag of control end-points */
      HW_IN_EP(0)->CFGP |= USBD_CFGP_CLRRDY_Msk;
      HW_OUT_EP(0)->CFGP |= USBD_CFGP_CLRRDY_Msk;

      HW_IN_EP(0)->CFG |= USBD_CFG_DSQ_SYNC_Msk;
      _usb_isr_invoke_setup_cb(&USBD1, 0);
    }

    /* EP events */
    if (intsts & USBD_INTSTS_EPEVT0_Msk) {
      /* Clear event flag */
      USBD->INTSTS = USBD_INTSTS_EPEVT0_Msk;
      usb_serve_out_endpoint(LOGICAL_EPN(0));
    }

    if (intsts & USBD_INTSTS_EPEVT1_Msk) {
      /* Clear event flag */
      USBD->INTSTS = (USBD_INTSTS_EPEVT1_Msk);
      usb_serve_in_endpoint(LOGICAL_EPN(1));
    }

    if (intsts & USBD_INTSTS_EPEVT2_Msk) {
      /* Clear event flag */
      USBD->INTSTS = (USBD_INTSTS_EPEVT2_Msk);
      usb_serve_out_endpoint(LOGICAL_EPN(2));
    }

    if (intsts & USBD_INTSTS_EPEVT3_Msk) {
      /* Clear event flag */
      USBD->INTSTS = (USBD_INTSTS_EPEVT3_Msk);
      usb_serve_in_endpoint(LOGICAL_EPN(3));
    }

    if (intsts & USBD_INTSTS_EPEVT4_Msk) {
      /* Clear event flag */
      USBD->INTSTS = (USBD_INTSTS_EPEVT4_Msk);
      usb_serve_out_endpoint(LOGICAL_EPN(4));
    }

#if NUC123_USB_WORKAROUND
    if (intsts & USBD_INTSTS_EPEVT5_Msk) {
      /* Clear event flag */
      /* in NUC123(AN) EP5-IN event also false triggers EP6 */
      USBD->INTSTS = (USBD_INTSTS_EPEVT5_Msk | USBD_INTSTS_EPEVT6_Msk);
      usb_serve_in_endpoint(LOGICAL_EPN(5));
      intsts &= ~USBD_INTSTS_EPEVT6_Msk;
    }
#else
    if (intsts & USBD_INTSTS_EPEVT5_Msk) {
      /* Clear event flag */
      USBD->INTSTS = (USBD_INTSTS_EPEVT5_Msk);
      usb_serve_in_endpoint(LOGICAL_EPN(5));
    }
#endif

#if NUC123_USB_HW_ENDPOINTS > 6
    if (intsts & USBD_INTSTS_EPEVT6_Msk) {
      /* Clear event flag */
      USBD->INTSTS = (USBD_INTSTS_EPEVT6_Msk);
      usb_serve_out_endpoint(LOGICAL_EPN(6));
    }

    if (intsts & USBD_INTSTS_EPEVT7_Msk) {
      /* Clear event flag */
      USBD->INTSTS = (USBD_INTSTS_EPEVT7_Msk);
      usb_serve_in_endpoint(LOGICAL_EPN(7));
    }
#endif
  }
}

void usb_lld_start(USBDriver* usbp)
{
  uint32_t delay;

  if (usbp->state == USB_STOP) {
    /* Enables the peripheral.*/
    CLK->APBCLK |= CLK_APBCLK_USBD_EN_Msk;

#if NUC123_USB_USE_USB1
    if (&USBD1 == usbp) {
    }
#endif /* NUC123_USB_USE_USB1 */
  }
  /* Configures the peripheral.*/
  /* Reset procedure enforced on driver start.*/

  SYS->IPRSTC2 |= SYS_IPRSTC2_USBD_RST_Msk;
  for (delay = 0; delay < 0x800; ++delay)
    ;
  SYS->IPRSTC2 &= ~(SYS_IPRSTC2_USBD_RST_Msk);

  /* Post reset initialization.*/
  /* Initial USB engine */
  USBD->ATTR = USBD_ATTR_PWRDN_Msk | USBD_ATTR_DPPU_EN_Msk |
               USBD_ATTR_USB_EN_Msk | USBD_ATTR_PHY_EN_Msk;

  USBD->STBUFSEG = 0UL;

  USBD->INTSTS = USBD_INTSTS_BUS_STS_Msk | USBD_INTSTS_FLDET_STS_Msk |
                 USBD_INTSTS_USB_STS_Msk | USBD_INTSTS_WAKEUP_STS_Msk;

  USBD->INTEN |= (USBD_INTEN_BUS_IE_Msk | USBD_INTEN_FLDET_IE_Msk |
                  USBD_INTEN_USB_IE_Msk | USBD_INTEN_WAKEUP_IE_Msk |
                  USBD_INTEN_WAKEUP_EN_Msk);

  nvicEnableVector(USBD_IRQn, NUC123_USB_IRQ_PRIORITY);

  for (delay = 0; delay < 0x800; ++delay)
    ;
  usb_lld_reset(usbp);
}

void usb_lld_stop(USBDriver* usbp)
{

  if (usbp->state == USB_READY) {
    /* Resets the peripheral. */

    /* Disables the peripheral. */
#if NUC123_USB_USE_USB1
    if (&USBD1 == usbp) {
    }
#endif /* NUC123_USB_USE_USB1 */

    usbDisconnectBus(usbp);
    CLK->APBCLK &= ~CLK_APBCLK_USBD_EN_Msk;
    nvicDisableVector(USBD_IRQn);
  }
}

void usb_lld_reset(USBDriver* usbp)
{
  sram_free_dword_offset = 1UL;
  USBD->FADDR = 0;
  /* EP0 initialization.*/
  usbp->epc[0] = &ep0config;
  usb_lld_init_endpoint(usbp, 0);
}

void usb_lld_set_address(USBDriver* usbp)
{
  USBD->FADDR = USBD_FADDR_FADDR_Msk & usbp->address;
}

void usb_lld_init_endpoint(USBDriver* usbp, usbep_t ep)
{
  if (usbp->epc[ep]->ep_mode == USB_EP_MODE_TYPE_ISOC) {
    osalDbgAssert(FALSE, "isochronous mode not yet supported");
    osalDbgAssert((usbp->epc[ep]->in_state == NULL) ||
                      (usbp->epc[ep]->out_state == NULL),
                  "isochronous EP cannot be IN and OUT");
  }

  /* If the out logical endpoint is used */
  if (usbp->epc[ep]->out_state) {
    switch (usbp->epc[ep]->ep_mode) {
    case USB_EP_MODE_TYPE_CTRL:
      HW_OUT_EP(ep)->CFG =
          ((ep << USBD_CFG_EP_NUM_Pos) & USBD_CFG_EP_NUM_Msk) |
          NUC123_USBD_CFG_OUT | USBD_CFG_CSTALL_Msk;
      break;
    case USB_EP_MODE_TYPE_ISOC:
      HW_OUT_EP(ep)->CFG =
          ((ep << USBD_CFG_EP_NUM_Pos) & USBD_CFG_EP_NUM_Msk) |
          NUC123_USBD_CFG_OUT | USBD_CFG_ISOCH_Msk;
      break;
    case USB_EP_MODE_TYPE_BULK:
    case USB_EP_MODE_TYPE_INTR:
    default:
      HW_OUT_EP(ep)->CFG =
          ((ep << USBD_CFG_EP_NUM_Pos) & USBD_CFG_EP_NUM_Msk) |
          NUC123_USBD_CFG_OUT;
    }
    HW_OUT_EP(ep)->BUFSEG = sram_free_dword_offset << USBD_BUFSEG_BUFSEG_Pos;
    sram_free_dword_offset +=
        BYTES_TO_NEXT_DWORD((uint32_t)usbp->epc[ep]->out_maxsize);

  } else {
    /* The only important bits here are STATE ([6:5]), and we just need
        to set them to 0 to disable the endpoint.
     */
    HW_OUT_EP(ep)->CFG = 0;
  }

  /* If the in logical endpoint is used */
  if (usbp->epc[ep]->in_state) {
    switch (usbp->epc[ep]->ep_mode) {
    case USB_EP_MODE_TYPE_CTRL:
      HW_IN_EP(ep)->CFG =
          ((ep << USBD_CFG_EP_NUM_Pos) & USBD_CFG_EP_NUM_Msk) |
          NUC123_USBD_CFG_IN | USBD_CFG_CSTALL_Msk;
      break;
    case USB_EP_MODE_TYPE_ISOC:
      HW_IN_EP(ep)->CFG =
          ((ep << USBD_CFG_EP_NUM_Pos) & USBD_CFG_EP_NUM_Msk) |
          NUC123_USBD_CFG_IN | USBD_CFG_ISOCH_Msk;
      break;
    case USB_EP_MODE_TYPE_BULK:
    case USB_EP_MODE_TYPE_INTR:
    default:
      HW_IN_EP(ep)->CFG =
          ((ep << USBD_CFG_EP_NUM_Pos) & USBD_CFG_EP_NUM_Msk) |
          NUC123_USBD_CFG_IN;
    }

    HW_IN_EP(ep)->BUFSEG = sram_free_dword_offset << USBD_BUFSEG_BUFSEG_Pos;
    sram_free_dword_offset +=
        BYTES_TO_NEXT_DWORD((uint32_t)usbp->epc[ep]->in_maxsize);
  } else {
    /* The only important bits here are STATE ([6:5]), and we just need
        to set them to 0 to disable the endpoint.
     */
    HW_IN_EP(ep)->CFG = 0;
  }
}

void usb_lld_disable_endpoints(USBDriver* usbp)
{
  for (uint8_t i = 0; i < NUC123_USB_HW_ENDPOINTS; ++i) {
    if (LOGICAL_EPN(i) != 0) {
      USBD->EP[i].CFGP |= USBD_CFGP_CLRRDY_Msk;
      USBD->EP[i].CFG &= ~USBD_CFG_STATE_Msk;
    }
  }

  sram_free_dword_offset = 1UL +
                           BYTES_TO_NEXT_DWORD(usbp->epc[0]->in_maxsize) +
                           BYTES_TO_NEXT_DWORD(usbp->epc[0]->out_maxsize);
}

usbepstatus_t usb_lld_get_status_out(USBDriver* usbp, usbep_t ep)
{

  (void)usbp;

  if (!(HW_OUT_EP(ep)->CFG & USBD_CFG_STATE_Msk)) {
    return EP_STATUS_DISABLED;
  }

  if (HW_OUT_EP(ep)->CFGP & USBD_CFGP_SSTALL_Msk) {
    return EP_STATUS_STALLED;
  }

  return EP_STATUS_ACTIVE;
}

usbepstatus_t usb_lld_get_status_in(USBDriver* usbp, usbep_t ep)
{
  (void)usbp;

  if (!(HW_IN_EP(ep)->CFG & USBD_CFG_STATE_Msk)) {
    return EP_STATUS_DISABLED;
  }

  if (HW_IN_EP(ep)->CFGP & USBD_CFGP_SSTALL_Msk) {
    return EP_STATUS_STALLED;
  }

  return EP_STATUS_ACTIVE;
}

void usb_lld_start_out(USBDriver* usbp, usbep_t ep)
{
  HW_OUT_EP(ep)->MXPLD =
      min(usbp->epc[ep]->out_state->rxsize, usbp->epc[ep]->out_maxsize);
}

void usb_lld_start_in(USBDriver* usbp, usbep_t ep)
{
  uint32_t txsize =
      min(usbp->epc[ep]->in_state->txsize, usbp->epc[ep]->in_maxsize);
  HW_IN_EP(ep)->MXPLD = usb_memcpy(USBD_SRAM_BASE + (HW_IN_EP(ep)->BUFSEG),
                                   usbp->epc[ep]->in_state->txbuf,
                                   txsize);
}

void usb_lld_stall_out(USBDriver* usbp, usbep_t ep)
{
  (void)usbp;
  HW_OUT_EP(ep)->CFGP |= (USBD_CFGP_SSTALL_Msk | USBD_CFGP_CLRRDY_Msk);
}

void usb_lld_stall_in(USBDriver* usbp, usbep_t ep)
{
  (void)usbp;
  HW_IN_EP(ep)->CFGP |= (USBD_CFGP_SSTALL_Msk | USBD_CFGP_CLRRDY_Msk);
}

void usb_lld_clear_out(USBDriver* usbp, usbep_t ep)
{
  (void)usbp;
  HW_OUT_EP(ep)->CFGP &= ~USBD_CFGP_SSTALL_Msk;
}

void usb_lld_clear_in(USBDriver* usbp, usbep_t ep)
{
  (void)usbp;
  HW_IN_EP(ep)->CFGP &= ~USBD_CFGP_SSTALL_Msk;
}
